--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - image: circleci/ruby:2.4.1
     steps:
       - torque/start-sandbox:
-          sandbox-name: "test"
+          sandbox-name: "jenkins"
           blueprint: "Jenkins"
           inputs: "{'AWS_INSTANCE_TYPE': 'm5.large','CS_TORQUE_TOKEN': 'abc', 'SPACE_NAME': 'Trial', 'JENKINS_ADMIN_PASS': 'admin', 'IAM_ROLE': 's3access-profile', 'BUCKET_NAME': 'tyest1'}"
       - run:
