--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
       id: test-app
       run: |
         echo "Running tests against sandbox with id: ${{ steps.start-sandbox.outputs.sandbox_id }}"
-        echo "Sandbox details are: ${{ steps.start-sandbox.outputs.sandbox_details }}
+        echo "Sandbox details are: ${{ steps.start-sandbox.outputs.sandbox_details }}"
