--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,3 +24,10 @@ jobs:
       run: |
         echo "Running tests against sandbox with id: ${{ steps.start-sandbox.outputs.sandbox_id }}"
         echo "Sandbox details are: ${{ steps.start-sandbox.outputs.sandbox_details }}"
+
+    - name: Stop sandbox
+      uses: QualiTorque/torque-end-sb-action@dev
+      with:
+        space: Sample
+        sandbox_id: ${{ steps.start-sandbox.outputs.sandbox_id }}
+        torque_token: ${{ secrets.TORQUE_TOKEN }} 
