--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         echo "Sandbox details are: ${{ steps.start-sandbox.outputs.sandbox_details }}"
 
     - name: Stop sandbox
-      uses: QualiTorque/torque-end-sb-action@v0.1.0
+      uses: QualiTorque/torque-end-sb-action@dev
       with:
         space: Sample
         sandbox_id: ${{ steps.start-sandbox.outputs.sandbox_id }}
