Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -16,3 +16,8 @@ steps:
     blueprint: '[Sample]Bitnami Nginx Helm Chart'
     sandbox: 'aece'
     inputs: 'replicaCount=1'
+- task: EndSandbox@0
+  inputs:
+    torqueEndpoint: 'Torque-Dima'
+    space: 'Sample'
+    sandboxId: '$(Torque.Sandbox_Id)'
