--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -11,7 +11,7 @@ steps:
 - task: StartSandbox@0
   name: 'Torque'
   inputs:
-    torqueEndpoint: 'Torque-Dima'
+    torqueEndpoint: 'Torque-Dmytro'
     timeout: '20'
     space: 'Sample'
     blueprint: '[Sample]Bitnami Nginx Helm Chart'
