--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
         inputs: "replicaCount=1"
         torque_token: ${{ secrets.TORQUE_TOKEN }}
         timeout: 30
+        duration: 10
 
     - name: Testing
       id: test-app
