--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
         torque_token: ${{ secrets.TORQUE_TOKEN }}
         torque_url: https://preview.qtorque.io
         timeout: 30
+        branch: main
 
 #     - name: Testing
 #       id: test-app
