--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,10 @@ jobs:
         echo "Running tests against sandbox with id: ${{ steps.start-sandbox.outputs.sandbox_id }}"
         echo "Sandbox details are: ${{ steps.start-sandbox.outputs.sandbox_details }}"
 
-#     - name: Stop sandbox
-#       uses: QualiTorque/torque-end-sb-action@dev
-#       with:
-#         space: Sample
-#         sandbox_id: ${{ steps.start-sandbox.outputs.sandbox_id }}
-#         torque_token: ${{ secrets.TORQUE_TOKEN }} 
+    - name: Stop sandbox
+      uses: QualiTorque/torque-end-sb-action@dockerize
+      with:
+        space: Sample
+        sandbox_id: ${{ steps.start-sandbox.outputs.sandbox_id }}
+        torque_token: ${{ secrets.TORQUE_TOKEN }}
+        torque_hostname: preview.qtorque.io
