--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,8 @@ jobs:
       uses: QualiTorque/torque-start-sb-action@dockerize
       with:
         space: dev
-        blueprint_name: jira
+        blueprint_name: inputnull
+        environment_name: abc
         torque_token: ${{ secrets.TORQUE_TOKEN }}
         torque_hostname: preview.qtorque.io
         timeout: 30
@@ -30,6 +31,6 @@ jobs:
       uses: QualiTorque/torque-end-sb-action@dockerize
       with:
         space: Sample
-        sandbox_id: ${{ steps.start-sandbox.outputs.sandbox_id }}
+        environment_id: ${{ steps.start-sandbox.outputs.sandbox_id }}
         torque_token: ${{ secrets.TORQUE_TOKEN }}
         torque_hostname: preview.qtorque.io
