--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       uses: QualiTorque/torque-start-sb-action@dockerize
       with:
         space: dev
-        blueprint_name: inputnull
+        blueprint_name: nginx
         environment_name: abc
         torque_token: ${{ secrets.TORQUE_TOKEN }}
         torque_hostname: preview.qtorque.io
