--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
     - name: Testing
       id: test-app
       run: |
-        echo "Running tests against sandbox with id: ${{ steps.start-sandbox.outputs.sandbox_id }}"
-        echo "Sandbox details are: ${{ steps.start-sandbox.outputs.sandbox_details }}"
+        echo "Running tests against sandbox with id: ${{ steps.start-sandbox.outputs.environment_id }}"
+        echo "Sandbox details are: ${{ steps.start-sandbox.outputs.environment_details }}"
 
     - name: Stop sandbox
       uses: QualiTorque/torque-end-sb-action@dockerize
