--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,25 +14,26 @@ jobs:
       id: start-sandbox
       uses: QualiTorque/torque-start-environment@v1
       with:
-        space: dev
-        blueprint_name: nginx
-        repository_name: qa-assets # new param
-        environment_name: abc
+        space: test-tags
+        blueprint_name: test
+        repository_name: quali-repo # new param
+        environment_name: test-CI
         torque_token: ${{ secrets.TORQUE_TOKEN }}
-        torque_hostname: preview.qtorque.io # only hostname, without schema
+        torque_hostname: portal.qtorque.io # only hostname, without schema
         timeout: 5 # set timeout in minutes if you want to wait until env is active
+        inputs: 'host_name=eks-torque'
 
-    - name: Testing
-      id: test-app
-      run: |
-        echo "Running tests against sandbox with id: ${{ steps.start-sandbox.outputs.environment_id }}"
-        echo "Sandbox details are: ${{ steps.start-sandbox.outputs.environment_details }}"
-        sleep 30
+#     - name: Testing
+#       id: test-app
+#       run: |
+#         echo "Running tests against sandbox with id: ${{ steps.start-sandbox.outputs.environment_id }}"
+#         echo "Sandbox details are: ${{ steps.start-sandbox.outputs.environment_details }}"
+#         sleep 30
 
-    - name: Stop sandbox
-      uses: QualiTorque/torque-end-environment@v1  
-      with:
-        space: Sample
-        environment_id: ${{ steps.start-sandbox.outputs.environment_id }}
-        torque_token: ${{ secrets.TORQUE_TOKEN }}
-        torque_hostname: preview.qtorque.io
+#     - name: Stop sandbox
+#       uses: QualiTorque/torque-end-environment@v1  
+#       with:
+#         space: Sample
+#         environment_id: ${{ steps.start-sandbox.outputs.environment_id }}
+#         torque_token: ${{ secrets.TORQUE_TOKEN }}
+#         torque_hostname: preview.qtorque.io
